# CipherTrust_Application_Protection

./: .gitignore  .gitmodules  README.md
database/databricks/: CUSTOMER_ARCHITECTURE.md  DEPLOYMENT.md  EXECUTION_MODEL_MATRIX.md  FIELD_FAQ.md  README.md  RUN_ORDER_GUIDE.md  STREAMING_AND_LAKEFLOW_GUIDE.md  STREAMING_CAPABILITY_MATRIX.md  TEST_RUNBOOK.md  pom.xml  pyproject.toml  requirements.txt
database/databricks/cluster_init_scripts/: copy_udf_config_init.sh  copy_udf_config_init_tls.sh
database/databricks/docs/: ARCHITECTURE_RECOMMENDATION.md  CRDP_TLS_SETUP_CHECKLIST.md  DATABRICKS_TLS_RUNTIME_GUIDE.md  DOCUMENTATION_INDEX.md  EXECUTION_MODEL_MATRIX_PLAINTEXT_PROTECTED_INTERNAL.md  EXTERNAL_FUNCTION_DATASTRUCTURE_GUIDE.md  EXTERNAL_HEADER_COLUMN_GUIDE.md  LOGGING_DESIGN.md  PLAINTEXT_PROTECTED_INTERNAL_COMMANDS.md  PROTECTION_PROFILE_OPTIONS.md
database/databricks/docs/marketing/: thales-databricks-crdp-brochure.html
database/databricks/notebooks/: COMPUTE_CLUSTER_DEPLOYMENT_GUIDE.md  NOTEBOOK_INDEX.md  compute_cluster_grant_examples.sql  compute_cluster_numbers_setup.sql  compute_cluster_plaintext_protected_internal_setup.sql  compute_cluster_secure_view_examples.sql  compute_cluster_secure_view_examples_numbers.sql  compute_cluster_secure_view_examples_test.sql  compute_cluster_secure_view_examples_test2.sql  compute_cluster_secure_view_examples_test2_castback.py  compute_cluster_secure_view_examples_test2_castback.sql  compute_cluster_table_reveal_castback.py  compute_cluster_table_reveal_castback.sql  compute_cluster_udf_smoke_test.py  databricks_compute_cluster_udf_numbers_smoke_test.html  databricks_compute_cluster_udf_numbers_smoke_test.py  databricks_compute_cluster_udf_plaintext_protected_internal_debug.py  databricks_compute_cluster_udf_smoke_test.py  databricks_compute_cluster_udf_smoke_test2.py  legacy_compute_cluster_secure_view_examples.sql  legacy_compute_cluster_secure_view_reference.sql  plaintext_setup.sql  python_secure_api_examples.py
database/databricks/notebooks/docs/: BULK_UDF_TUNING_CHEAT_SHEET.md  DELTA_PARTITIONING_GUIDANCE.md  NOTEBOOK_DOCS_INDEX.md  PARTITIONING_GUIDANCE.md  PERFORMANCE_CONSIDERATIONS.md  PLAINTEXT_PROTECTED_INTERNAL_COMMANDS.md  PROMETHEUS_CRDP_METRICS_GUIDE.md
database/databricks/notebooks/internal/: internal_bulk_array_benchmark.py  internal_bulk_array_benchmark_basic.py  internal_pipeline_end_to_end_bulk_load_test.py  internal_pipeline_end_to_end_load_test.py  internal_pipeline_end_to_end_scalar_load_test.py  internal_scalar_object_aware_benchmark.py  internal_scalar_object_aware_load.py
database/databricks/notebooks/numbers/: numbers_setup.sql  (+3 more)
database/databricks/sql_warehouse/: OPTIMIZED_UDF_MEMORY_GUIDANCE.md  SQL_WAREHOUSE_DEPLOYMENT_GUIDE.md  SQL_WAREHOUSE_INDEX.md  SQL_WAREHOUSE_ROLLOUT_CHECKLIST.md  create_uc_functions_built_wheel.sql  create_uc_plaintext_protected_internal_reveal_functions_and_views_embedded_config.sql  create_uc_plaintext_protected_internal_reveal_functions_and_views_embedded_config_optimized.sql  create_uc_plaintext_protected_internal_reveal_functions_and_views_wheel_includes_properties.sql  create_uc_reveal_functions_and_views.sql  create_uc_reveal_functions_and_views_packaged_config.sql  create_uc_secure_views.sql  grant_uc_secure_views.sql  legacy_create_uc_functions_built_wheel.sql  legacy_thales_crdp_uc_function_templates.sql  sample_create_uc_secure_views.sql  sample_grant_uc_secure_views.sql  sample_thales_crdp_python_udf_imports.py  thales_crdp_python_udf_examples.py  thales_crdp_uc_function_templates.sql
database/databricks/streaming/: STREAMING_AND_LAKEFLOW_GUIDE.md  STREAMING_CAPABILITY_MATRIX.md  STREAMING_INDEX.md  lakeflow_sql_examples.sql  plaintext_protected_internal_lakeflow_examples.sql  structured_streaming_examples.py  structured_streaming_uc_view_example.sql
mcp-servers/ciphertrust-manager-mcp-server/: .env.example  .gitignore  LICENSE  README.md  package.json  pyproject.toml
mcp-servers/ciphertrust-manager-mcp-server/docs/: EXAMPLE_PROMPTS.md  TESTING.md  TOOLS.md
mcp-servers/ciphertrust-manager-mcp-server/scripts/: run_tests.py  test_with_inspector.bat  test_with_inspector.sh
mcp-servers/ciphertrust-manager-mcp-server/tests/: mcp_inspector_config.json  test_integration_simple.py  test_scenarios.json  test_server.py
mcp-servers/thales-cdsp-cakm-mcp-server/: .env.example  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
mcp-servers/thales-cdsp-cakm-mcp-server/config/: mcp.json.cursor.example
mcp-servers/thales-cdsp-cakm-mcp-server/docs/: EXAMPLE_PROMPTS.md  PREREQUISITES.md  TESTING.md
mcp-servers/thales-cdsp-csm-mcp-server/: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
mcp-servers/thales-cdsp-csm-mcp-server/config/: mcp-config-uv.json  mcp-config.json
mcp-servers/thales-cdsp-csm-mcp-server/docs/: README.md  TESTING.md  TOOLS.md  TRANSPORT_MODES.md
mcp-servers/thales-cdsp-csm-mcp-server/tests/: run_tests.py  test_mcp_protocol.py
(+1867 files in other folders)
