[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thales-databricks-udf"
version = "0.1.7"
description = "Thales CRDP helpers for Databricks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
