[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "database-tde-mcp-server"
version = "1.0.0"
description = "Database TDE MCP Server for CipherTrust CAKM Integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Organization", email = "admin@company.com"},
]
keywords = ["mcp", "database", "tde", "encryption", "ciphertrust", "cakm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyodbc>=5.0.0",
    "oracledb>=1.0.0",
    "paramiko>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
mysql = [
    "PyMySQL>=1.0.0",
]
postgresql = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
database-tde-mcp-server = "database_tde_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/database_tde_server"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
