[project]
name = "thales-cdsp-csm-mcp-server"
version = "1.0.0"
description = "Thales CDSP CSM (CipherTrust Secrets Management) Secrets Management, powered by Akeyless, MCP Server"
authors = [
    {name = "Sanyam Bassi", email = "sanyam.bassi@thalesgroup.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "union>=0.1.190",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "requests>=2.25.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
thales-cdsp-csm-mcp-server = "src.thales_cdsp_csm_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "requests>=2.25.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

 